--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 1.16
+          distribution: 'adopt'
 
       # Check out current repository
       - name: Fetch Sources
