--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,9 +17,10 @@ jobs:
 
       # Setup Java 1.8 environment for the next steps
       - name: Setup Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.11
+          java-version: 1.16
+          distribution: 'adopt'
 
       # Check out current repository
       - name: Fetch Sources
