--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -133,4 +133,7 @@ jobs:
           name: v${{ needs.build.outputs.version }}
           body: ${{ needs.build.outputs.changelog }}
           draft: true
-          files: ./binaries/*
+          files: |
+            ./binaries/**/*.msi
+            ./binaries/**/*.dmg
+            ./binaries/**/*.deb
