--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,14 +78,14 @@ jobs:
           echo "::set-output name=os::$RUNNER_OS"
 
       - name: Import cert for MacOS
-        if: matrix.os == 'macos-latest'
+        if: matrix.platform == 'macos-latest'
         uses: apple-actions/import-codesign-certs@v1
         with:
           p12-file-base64: ${{ secrets.CERTIFICATES_P12 }}
           p12-password: ${{ secrets.CERTIFICATES_P12_PASSWORD }}
 
       - name: Setup Keychain
-        if: matrix.os == 'macos-latest'
+        if: matrix.platform == 'macos-latest'
         run: |
           xcrun altool --store-password-in-keychain-item "NOTARIZATION_PASSWORD" \
                        --username ${{ secrets.NOTARIZATION_APPLEID }} \
