--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,11 +6,6 @@ jobs:
     name: Gradle Wrapper
     runs-on: ubuntu-latest
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.7.0
-        with:
-          access_token: ${{ secrets.GITHUB_TOKEN }}
-
       # Check out current repository
       - name: Fetch Sources
         uses: actions/checkout@v2
@@ -110,7 +105,7 @@ jobs:
           path: |
             ./desktop/build/compose/binaries/main/msi/
             ./desktop/build/compose/binaries/main/deb/
-            ./desktop/build/compose/notarization/main/*/*.dmg
+            ./desktop/build/compose/notarization/**/*.dmg
 
   # Prepare a draft release for GitHub Releases page for the manual verification
   # If accepted and published, release workflow would be triggered
